Fix page padding on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -87,7 +87,7 @@ body h1 {
 
 @media only screen and (max-width: 900px) {
   body {
-    padding: 0.5rem;
+    padding: 2rem 0.5rem;
   }
 
   .app {
