--- a/scss/main.scss
+++ b/scss/main.scss
@@ -98,7 +98,7 @@ body {
 
 @media only screen and (max-width: 900px) {
     body {
-        padding: 0.5rem;
+        padding: 2rem 0.5rem;
     }
     .app {
         width: 100%;
